outputTemp/report_test_schedule_miniM.txt
   Compiling cortex-m-rtic v1.1.3 (/home/jonas/xjobb/cortex-m-rtic)
error[E0308]: mismatched types
  --> examples/report_test_schedule_miniM.rs:10:1
   |
10 | #[rtic::app(device = lm3s6965, dispatchers = [SSI0], compiler_passes = [standard])]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | expected an array with a fixed size of 2 elements, found one with 1 element
   | arguments to this function are incorrect
   |
   = note: expected array `[MaybeUninit<Instant<u64, 1, 100>>; 2]`
              found array `[MaybeUninit<Instant<u64, 1, 100>>; 1]`
note: associated function defined here
  --> /home/jonas/xjobb/cortex-m-rtic/src/lib.rs:98:18
   |
98 |     pub const fn new(value: T) -> Self {
   |                  ^^^
   = note: this error originates in the attribute macro `rtic::app` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0308`.
error: could not compile `cortex-m-rtic` (example "report_test_schedule_miniM") due to 1 previous error
